--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -189,7 +189,7 @@ table td {
 }
 
 .bg-red {
-  background: #ff7f2a !important;
+  background: #c83737 !important;
   color: white !important;
 }
 
@@ -200,6 +200,11 @@ table td {
 
 .bg-green {
   background: #008542 !important;
+  color: white !important;
+}
+
+.bg-orange {
+  background: #ff7f2a !important;
   color: white !important;
 }
 
@@ -218,53 +223,16 @@ table td {
   margin-right: 10px;
 }
 
-#admin-testimonial {
-  position: absolute;
-  z-index: 10000;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #0054815e;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#admin-testimonial .container-testimonial {
-  cursor: default;
-  width: 100%;
-  height: 100%;
-  background: #05304be1;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#admin-testimonial .container-testimonial .top {
-  height: 60px;
+.top {
+  height: 50px;
   background: #052335;
-  margin: 0 0 0 0;
+  margin: 0 20px 0 0 !important;
   padding: 0 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: fixed;
+  width: 100%;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
@@ -272,91 +240,118 @@ table td {
       -ms-flex-align: center;
           align-items: center;
   padding-right: 15px;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
-#admin-testimonial .container-testimonial .top p {
+.top p {
   width: 95%;
   text-align: center;
 }
 
-#admin-testimonial .container-testimonial .bottom {
-  padding: 25px 40px 0px 40px;
-  margin: 0;
-  height: 100%;
-  color: white;
-  display: block;
-}
-
-#admin-testimonial .container-testimonial .bottom * {
-  color: black;
-}
-
-#admin-testimonial .container-testimonial .bottom .input {
-  margin: 7px 0 0;
-  width: 92.8%;
-  height: 20px;
-  border: none;
-  border-radius: 10px;
-  padding: 5px 10px;
-  display: inline-block;
-}
-
-#admin-testimonial .container-testimonial .bottom .input.half {
-  width: 45%;
-}
-
-#admin-testimonial .container-testimonial .bottom #recommend {
-  margin-top: 10px;
-  width: 92.8%;
-  height: auto;
-  border: none;
-  border-radius: 10px;
-  padding: 5px 10px;
-}
-
-#admin-testimonial .container-testimonial .bottom #image-input {
-  margin: 7px 0;
-  color: white;
-  border: none;
-  display: block;
-  border-radius: 10px;
-}
-
-#admin-testimonial .container-testimonial .bottom #category {
-  margin: 7px 0;
-  width: 100px;
-  padding: 1px 6px;
-  border: none;
-  border-radius: 7px;
-  display: block;
-}
-
-#admin-testimonial .container-testimonial .bottom .btn {
-  display: block;
+#admin-container {
   width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #05304b;
+  z-index: 10000;
 }
 
-#admin-testimonial .container-testimonial .bottom .btn #uploadtesti {
-  border: none;
-  background: #ff7f2a;
-  padding: 10px 20px;
-  font-size: 15px;
-  color: white;
-  display: inline;
+#admin-container .admin-editor {
+  position: fixed;
+  top: 50px;
+  left: 0;
+  padding: 0;
+  width: calc(100% - 100px);
+  height: 100%;
+  padding: 5px 50px;
+}
+
+#admin-container .admin-editor * {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #505050;
+}
+
+#admin-container .admin-editor .table-container {
+  height: 120px;
+  overflow-y: scroll;
+  margin-bottom: 3px;
   border-radius: 10px;
+  margin: 3px;
 }
 
-#admin-testimonial .container-testimonial .right-side {
-  padding: 0px 40px 20px 40px;
+#admin-container .admin-editor .table-container #data {
+  width: calc(100%);
+  border-collapse: collapse;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-#admin-testimonial .container-testimonial .right-side * {
-  display: inline;
-  padding: 0px 5px;
+#admin-container .admin-editor .table-container #data th,
+#admin-container .admin-editor .table-container #data td {
+  text-align: left;
+  padding: 3px 5px 3px 10px;
+  font-size: 13px;
 }
 
-#admin-testimonial .container-testimonial .right-side span {
-  color: #ff7f2a;
+#admin-container .admin-editor .table-container #data tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#admin-container .admin-editor .table-container #data th {
+  background-color: #005481;
+  color: white;
+}
+
+#admin-container .admin-editor form {
+  /* Clear floats after the columns */
+}
+
+#admin-container .admin-editor form input[type="text"],
+#admin-container .admin-editor form select,
+#admin-container .admin-editor form textarea {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid rgba(255, 255, 255, 0);
+  border-radius: 5px;
+  resize: vertical;
+  font-family: "Quicksand";
+  font-size: 13px;
+}
+
+#admin-container .admin-editor form input[type="submit"] {
+  color: white;
+  padding: 8px 15px;
+  border: none;
+  cursor: pointer;
+  float: right;
+  margin: 3px 0 3px 3px;
+  width: 162px;
+  height: 30;
+  border-radius: 5px;
+}
+
+#admin-container .admin-editor form .col-50 {
+  float: left;
+  width: calc(50% - 6px);
+  margin: 3px;
+}
+
+#admin-container .admin-editor form .col {
+  float: left;
+  width: calc(100% - 6px);
+  margin: 3px;
+}
+
+#admin-container .admin-editor form .row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .wrapper {
@@ -502,30 +497,6 @@ table td {
           box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
 
-.wrapper.portfolio .top {
-  height: 50px;
-  background: #052335;
-  margin: 0 20px 0 0 !important;
-  padding: 0 0 0 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: fixed;
-  width: 100%;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-right: 15px;
-}
-
-.wrapper.portfolio .top p {
-  width: 95%;
-  text-align: center;
-}
-
 .wrapper.portfolio .popup {
   position: absolute;
   z-index: 10000;
@@ -575,6 +546,7 @@ table td {
 }
 
 .wrapper.portfolio .popup .container .bottom .left-side .tech {
+  margin-top: 3px;
   display: inline-block;
   width: 100%;
 }
@@ -582,10 +554,10 @@ table td {
 .wrapper.portfolio .popup .container .bottom .left-side .tech p {
   margin: 2px 0;
   display: inline-block;
-  padding: 0px 7px;
+  padding: 0px 14px;
   background: #ff7f2a;
   color: white;
-  border-radius: 5px;
+  border-radius: 14px;
   margin-right: 5px;
 }
 
