redesign portfolio admin

--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -498,7 +498,7 @@ table td {
 }
 
 .wrapper.portfolio .popup {
-  position: absolute;
+  position: fixed;
   z-index: 10000;
   width: 100%;
   height: 100%;
@@ -523,15 +523,14 @@ table td {
   width: 100%;
   height: 100%;
   background: #05304be1;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-y: auto;
   display: block;
 }
 
 .wrapper.portfolio .popup .container .bottom {
   padding: 25px 40px 0px 40px;
   margin: 50px 0 0;
-  height: 100%;
+  height: calc(100% - 100px);
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
