--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -523,14 +523,15 @@ table td {
   width: 100%;
   height: 100%;
   background: #05304be1;
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
   display: block;
 }
 
 .wrapper.portfolio .popup .container .bottom {
   padding: 25px 40px 0px 40px;
   margin: 50px 0 0;
-  height: calc(100% - 100px);
+  height: 100%;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
