--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -425,12 +425,13 @@ table td {
             width: 100%;
             height: 100%;
             background: #05304be1;
-            overflow-y: auto;
+            overflow-y: scroll;
+            overflow-x: hidden;
             display: block;
             .bottom {
                 padding: 25px 40px 0px 40px;
                 margin: 50px 0 0;
-                height: calc(100% - 100px);
+                height: 100%;
                 color: white;
                 display: flex;
                 .left-side {
