--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -12,7 +12,9 @@ hr {
   transition: all 0.6s ease;
 }
 
-html {
+html, body {
+  min-height: 100% !important;
+  height: 100%;
   scroll-behavior: smooth !important;
 }
 
@@ -356,10 +358,6 @@ table td {
   content: "";
   display: table;
   clear: both;
-}
-
-.wrapper {
-  overflow: hidden !important;
 }
 
 .wrapper.aboutme {
