--- a/styles/global.css
+++ b/styles/global.css
@@ -143,6 +143,12 @@ body {
 }
 
 
+html, body {
+  min-height: 100% !important;
+  height: 100%;
+  scroll-behavior: smooth !important;
+}
+
 
 .fa,
 .far,
