--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -325,7 +325,6 @@ html, body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow: hidden;
   -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -722,9 +721,8 @@ html, body {
   }
   .card .right-side {
     margin: 0 0 0 60px;
-    width: auto;
     border-radius: 0;
-    height: 100%;
+    height: inherit !important;
     -webkit-box-shadow: none;
             box-shadow: none;
   }
