--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -230,7 +230,6 @@ html, body {
     max-width: 75em;
     margin: 0 auto;
     display: flex;
-    overflow: hidden;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     transition: all 1s ease;
@@ -521,9 +520,8 @@ html, body {
         }
         .right-side {
             margin: 0 0 0 60px;
-            width: auto;
             border-radius: 0;
-            height: 100%;
+            height: inherit !important;
             box-shadow: none;
         }
     }
