--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -19,12 +19,6 @@ hr {
     transition: all 0.6s ease;
 }
 
-html, body {
-    min-height: 100% !important;
-    height: 100%;
-    scroll-behavior: smooth !important;
-}
-
 body {
     padding: calc(10px + 3vw) calc(5px + 4vw);
 }
@@ -297,7 +291,9 @@ table td {
         }
     }
 }
-
+.wrapper {
+    overflow: hidden !important;
+}
 .wrapper.aboutme {
     * {
         cursor: default;
@@ -563,7 +559,6 @@ table td {
             background: white;
             border-radius: 10px;
             text-align: center;
-            overflow: hidden;
             transition: all 1s ease;
             .profile {
                 margin: 0 auto;
@@ -668,7 +663,7 @@ table td {
 }
 
 @media only screen and (max-width: 624px) {
-    .wrapper.wrapper.testimonial {
+    .wrapper.testimonial {
         .card-container {
             border-bottom: 25px solid rgb(255, 255, 255);
         }
