--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -601,6 +601,7 @@ html, body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  overflow: hidden;
 }
 
 .card .right-side .page {
@@ -721,7 +722,9 @@ html, body {
   }
   .card .right-side {
     margin: 0 0 0 60px;
+    width: auto;
     border-radius: 0;
+    overflow: hidden;
     height: inherit !important;
     -webkit-box-shadow: none;
             box-shadow: none;
