--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -432,6 +432,7 @@ html, body {
         background-color: $primary;
         display: flex;
         width: 100%;
+        overflow: hidden;
         .page {
             width: 100%;
             height: 100%;
@@ -520,7 +521,9 @@ html, body {
         }
         .right-side {
             margin: 0 0 0 60px;
+            width: auto;
             border-radius: 0;
+            overflow: hidden;
             height: inherit !important;
             box-shadow: none;
         }
