--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -16,6 +16,12 @@ body {
   padding: calc(10px + 3vw) calc(5px + 4vw);
 }
 
+html, body {
+  min-height: 100% !important;
+  height: 100%;
+  scroll-behavior: smooth !important;
+}
+
 table td {
   vertical-align: top;
   text-align: left;
@@ -689,6 +695,7 @@ table td {
   background: white;
   border-radius: 10px;
   text-align: center;
+  overflow: hidden;
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
 }
