--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -12,14 +12,12 @@ hr {
   transition: all 0.6s ease;
 }
 
-body {
-  padding: calc(10px + 3vw) calc(5px + 4vw);
+html {
+  scroll-behavior: smooth !important;
 }
 
-html, body {
-  min-height: 100% !important;
-  height: 100%;
-  scroll-behavior: smooth !important;
+body {
+  padding: calc(10px + 3vw) calc(5px + 4vw);
 }
 
 table td {
@@ -671,6 +669,7 @@ table td {
 .wrapper.testimonial .testi-wrapper {
   height: 100%;
   width: 100%;
+  overflow: hidden;
   margin: 10px auto;
   padding: 10px 0;
   position: relative;
@@ -827,16 +826,16 @@ table td {
 }
 
 @media only screen and (max-width: 624px) {
-  .wrapper.testimonial .card-container {
+  .wrapper.wrapper.testimonial .card-container {
     border-bottom: 25px solid white;
   }
-  .wrapper.testimonial .card-container.overflow {
+  .wrapper.wrapper.testimonial .card-container.overflow {
     overflow-y: scroll;
     border-color: #f0f0f0;
     -webkit-box-shadow: none !important;
             box-shadow: none !important;
   }
-  .wrapper.testimonial .card-container.overflow::after {
+  .wrapper.wrapper.testimonial .card-container.overflow::after {
     content: "👋";
     position: absolute;
     bottom: 4px;
