--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -120,18 +120,15 @@
           animation-delay: -0.15s;
 }
 
+html {
+  scroll-behavior: smooth !important;
+}
+
 body {
   background-color: #05304b;
-  height: 100%;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   margin: 15px 0 0;
-}
-
-html, body {
-  min-height: 100% !important;
-  height: 100%;
-  scroll-behavior: smooth !important;
 }
 
 .construction {
@@ -685,6 +682,11 @@ html, body {
     -webkit-animation: noise .5s linear infinite;
             animation: noise .5s linear infinite;
     padding: 0;
+  }
+  html, body {
+    scroll-behavior: smooth !important;
+    min-height: 100% !important;
+    height: 100%;
   }
   #particles-js {
     display: none;
