--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -1,4 +1,21 @@
 @charset "UTF-8";
+@-webkit-keyframes noise {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+@keyframes noise {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+
 @-webkit-keyframes slidein {
   0% {
     -webkit-transform: translateX(10%);
@@ -9,6 +26,7 @@
             transform: translateX(0%);
   }
 }
+
 @keyframes slidein {
   0% {
     -webkit-transform: translateX(10%);
@@ -35,28 +53,6 @@
   0% {
     -webkit-transform: translateY(50%);
             transform: translateY(50%);
-  }
-  100% {
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-  }
-}
-
-@-webkit-keyframes getin {
-  0% {
-    -webkit-transform: translateY(10%);
-            transform: translateY(10%);
-  }
-  100% {
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-  }
-}
-
-@keyframes getin {
-  0% {
-    -webkit-transform: translateY(10%);
-            transform: translateY(10%);
   }
   100% {
     -webkit-transform: translateY(0%);
@@ -128,7 +124,6 @@ body {
   background-color: #05304b;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  margin: 15px 0 0;
 }
 
 .construction {
@@ -318,7 +313,12 @@ body {
   height: 38.5em !important;
   width: 88%;
   max-width: 75em;
-  margin: 0 auto;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -628,72 +628,22 @@ body {
   color: #005481;
 }
 
-@-webkit-keyframes popin {
-  0% {
-    -webkit-transform: translateY(-200%);
-            transform: translateY(-200%);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-    opacity: 1;
-  }
-}
-
-@keyframes popin {
-  0% {
-    -webkit-transform: translateY(-200%);
-            transform: translateY(-200%);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes noise {
-  0% {
-    background-position: 0 0;
-  }
-  100% {
-    background-position: 100% 100%;
-  }
-}
-
-@keyframes noise {
-  0% {
-    background-position: 0 0;
-  }
-  100% {
-    background-position: 100% 100%;
-  }
-}
-
 @media only screen and (max-width: 1000px) {
   body {
-    -webkit-transition: all 1s ease;
-    transition: all 1s ease;
     margin: 0;
     background: #005481;
     background-image: url(texture.png);
-    -webkit-animation: noise .5s linear infinite;
-            animation: noise .5s linear infinite;
+    -webkit-animation: noise 0.5s linear infinite;
+            animation: noise 0.5s linear infinite;
     padding: 0;
   }
-  html, body {
+  html,
+  body {
     scroll-behavior: smooth !important;
     min-height: 100% !important;
     height: 100%;
-  }
-  #particles-js {
-    display: none;
-  }
-  #back {
-    position: absolute;
-    height: 0;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
   }
   nav {
     -webkit-transition: all 1s ease;
@@ -708,8 +658,9 @@ body {
     height: 100% !important;
     -webkit-box-shadow: none;
             box-shadow: none;
-    -webkit-transition: min-height 500ms ease;
-    transition: min-height 500ms ease;
+    position: relative;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
     margin: 0;
     padding: 0;
   }
@@ -730,14 +681,6 @@ body {
     height: inherit !important;
     -webkit-box-shadow: none;
             box-shadow: none;
-  }
-  #fix {
-    display: block;
-    -webkit-animation: popin 1.8s ease;
-            animation: popin 1.8s ease;
-  }
-  #back {
-    display: none;
   }
   #copyright {
     display: none;
