--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @-webkit-keyframes noise {
   0% {
     background-position: 0 0;
@@ -7,6 +6,7 @@
     background-position: 100% 100%;
   }
 }
+
 @keyframes noise {
   0% {
     background-position: 0 0;
@@ -385,7 +385,7 @@ body {
 }
 
 .card .left-side .profile-container .view #thank-message::after {
-  content: "👋 Thanks for being here!";
+  content: attr(data-before);
   position: absolute;
   font-family: Quicksand;
   font-style: normal;
@@ -394,7 +394,9 @@ body {
   margin: 80px 0px 0px -40px;
   border-radius: 20px;
   color: white;
-  width: 180px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   padding: 8px 10px 8px 10px;
   background: #005f92;
   -webkit-box-shadow: 1px 1px 5px rgba(0, 17, 170, 0.5);
