--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -267,7 +267,7 @@ body {
                     transition: all 0.3s ease;
                 }
                 #thank-message::after {
-                    content: "👋 Thanks for being here!";
+                    content: attr(data-before);
                     position: absolute;
                     font-family: Quicksand;
                     font-style: normal;
@@ -276,7 +276,7 @@ body {
                     margin: 80px 0px 0px -40px;
                     border-radius: 20px;
                     color: white;
-                    width: 180px;
+                    width: max-content;
                     padding: 8px 10px 8px 10px;
                     background: #005f92;
                     box-shadow: 1px 1px 5px rgba(0, 17, 170, 0.5);
