--- a/styles/pages/pages.scss
+++ b/styles/pages/pages.scss
@@ -412,14 +412,14 @@ table td {
                     border-radius: 8px;
                     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
                     animation-name: fadeIn;
-                    animation-fill-mode: forwards;
+                    animation-fill-mode: forwards; //to keep the last animate result
                     filter: grayscale(50%);
                 }
                 img:hover {
                     filter: grayscale(0);
-                    opacity: 1;
+                    opacity: 1 !important;
                     transition: all 0.5s ease;
-                    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+                    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.5);
                 }
             }
         }
