--- a/styles/home/style.scss
+++ b/styles/home/style.scss
@@ -450,8 +450,8 @@ body {
         display: flex;
         width: 100%;
         overflow: hidden;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
         .page {
             width: 100%;
             height: 100%;
