--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -81,11 +81,11 @@ table td {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 #blocker img {
@@ -95,9 +95,9 @@ table td {
 
 .view-cv {
   -webkit-animation: 1s fadeIn;
-          animation: 1s fadeIn;
+  animation: 1s fadeIn;
   -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
   position: fixed;
   bottom: 10px;
   right: 10px;
@@ -145,11 +145,11 @@ table td {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-right: 10px;
 }
 
@@ -164,11 +164,11 @@ table td {
   position: fixed;
   width: 100%;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+  -ms-flex-pack: end;
+  justify-content: end;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-right: 15px;
   top: 0;
   left: 0;
@@ -202,7 +202,7 @@ table td {
 
 #admin-container .admin-editor * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   color: #505050;
 }
 
@@ -236,10 +236,6 @@ table td {
 #admin-container .admin-editor .table-container #data th {
   background-color: #005481;
   color: white;
-}
-
-#admin-container .admin-editor form {
-  /* Clear floats after the columns */
 }
 
 #admin-container .admin-editor form input[type="text"],
@@ -341,7 +337,7 @@ table td {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   cursor: pointer;
 }
 
@@ -392,12 +388,12 @@ table td {
 .wrapper.portfolio .slider .post {
   width: 100%;
   -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   height: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(9rem, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
+  -ms-grid-columns: (minmax(9rem, 1fr)) [auto-fill];
+  grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
   grid-auto-flow: auto;
 }
 
@@ -412,23 +408,23 @@ table td {
   transition: all 0.5s ease;
   border-radius: 8px;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   -webkit-animation-name: fadeIn;
-          animation-name: fadeIn;
+  animation-name: fadeIn;
   -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
   -webkit-filter: grayscale(0%);
-          filter: grayscale(0%);
+  filter: grayscale(0%);
 }
 
 .wrapper.portfolio .slider .post .portfolio img:hover {
   -webkit-filter: grayscale(50%);
-          filter: grayscale(50%);
+  filter: grayscale(50%);
   opacity: 1 !important;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-box-shadow: 0 7px 10px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 7px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 7px 10px rgba(0, 0, 0, 0.5);
 }
 
 .wrapper.portfolio .popup {
@@ -445,11 +441,11 @@ table td {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .wrapper.portfolio .popup .container {
@@ -473,8 +469,8 @@ table td {
 
 .wrapper.portfolio .popup .container .bottom .left-side {
   -webkit-box-flex: 0.8;
-      -ms-flex: 0.8;
-          flex: 0.8;
+  -ms-flex: 0.8;
+  flex: 0.8;
   display: block;
 }
 
@@ -536,8 +532,8 @@ table td {
 
 .wrapper.portfolio .popup .container .bottom .right-side {
   -webkit-box-flex: 0.2;
-      -ms-flex: 0.2;
-          flex: 0.2;
+  -ms-flex: 0.2;
+  flex: 0.2;
 }
 
 .wrapper.portfolio .popup .container .bottom .right-side img {
@@ -546,12 +542,12 @@ table td {
   margin-bottom: 10px;
   border-radius: 10px;
   -webkit-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
 }
 
 .wrapper.portfolio .popup .container .bottom .right-side img:hover {
   -webkit-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
-          box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
 }
@@ -633,18 +629,18 @@ table td {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .wrapper.testimonial .testi-wrapper .card-container .profile img {
   width: 132px;
   height: auto;
   -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   min-width: 100%;
   min-height: 100%;
 }
@@ -708,14 +704,14 @@ table td {
   width: -moz-max-content;
   width: max-content;
   margin: 3px 0 0;
-  -webkit-transition: .5s all ease;
-  transition: .5s all ease;
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
 }
 
 .wrapper.contact .getintouch:hover {
   background: rgba(255, 255, 255, 0.938);
-  -webkit-transition: .3s all ease;
-  transition: .3s all ease;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s all ease;
 }
 
 .wrapper.contact .find-me h3 {
@@ -732,8 +728,8 @@ table td {
   min-width: 15px;
   min-height: 15px;
   margin: 10px 10px 0px 0px;
-  -webkit-transition: all .5s ease;
-  transition: all .5s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .wrapper.contact .find-me .social img {
@@ -754,7 +750,7 @@ table td {
     overflow-y: scroll;
     border-color: #f0f0f0;
     -webkit-box-shadow: none !important;
-            box-shadow: none !important;
+    box-shadow: none !important;
   }
   .wrapper.testimonial .card-container.overflow::after {
     content: "👋";
@@ -825,8 +821,8 @@ table td {
 
 @media only screen and (max-width: 400px) {
   .wrapper.portfolio .slider .post {
-    -ms-grid-columns: (minmax(8rem, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+    -ms-grid-columns: (minmax(8rem, 1fr)) [auto-fit];
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
   }
   .wrapper.aboutme ul:before {
     content: "";
