--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+{%- assign works = site.timelines | where:"type", "work" -%}
+{%- assign educations = site.timelines | where:"type", "education" -%}
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
@@ -14,7 +18,6 @@ layout: default
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
@@ -30,5 +33,17 @@ layout: default
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
+
+  {% for work in works %}
+    <h2 class="timeline-item">{{ work.name }}</h2>
+    <span>{{ work.start | date: date_format }} - {{ work.end | date: date_format }}</span>
+    <p>{{ work.content | markdownify }}</p>
+  {% endfor %}
+
+  {% for education in educations %}
+    <h2 class="timeline-item">{{ education.name }}</h2>
+    <span>{{ education.start | date: date_format }} - {{ education.end | date: date_format }}</span>
+    <p>{{ education.content | markdownify }}</p>
+  {% endfor %}
 
 </div>
