add basic timeline ui

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,47 +3,54 @@ layout: default
 ---
 
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-{%- assign works = site.timelines | where:"type", "work" -%}
-{%- assign educations = site.timelines | where:"type", "education" -%}
+<!-- {%- assign works = site.timelines | where:"type", "work" -%} -->
+<!-- {%- assign educations = site.timelines | where:"type", "education" -%} -->
+{%- assign educations = site.timelines -%}
+
 
 <div class="home">
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
+  <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
-
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+  <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+  <ul class="post-list">
+    {%- for post in site.posts -%}
+    <li>
+      <span class="post-meta">{{ post.date | date: date_format }}</span>
+      <h3>
+        <a class="post-link" href="{{ post.url | relative_url }}">
+          {{ post.title | escape }}
+        </a>
+      </h3>
+      {%- if site.show_excerpts -%}
+      {{ post.excerpt }}
+      {%- endif -%}
+    </li>
+    {%- endfor -%}
+  </ul>
   {%- endif -%}
-
-  {% for work in works %}
-    <h2 class="timeline-item">{{ work.name }}</h2>
-    <span>{{ work.start | date: date_format }} - {{ work.end | date: date_format }}</span>
-    <p>{{ work.content | markdownify }}</p>
-  {% endfor %}
-
-  {% for education in educations %}
-    <h2 class="timeline-item">{{ education.name }}</h2>
-    <span>{{ education.start | date: date_format }} - {{ education.end | date: date_format }}</span>
-    <p>{{ education.content | markdownify }}</p>
-  {% endfor %}
-
+  <section class="timelines-wrapper">
+    {% for education in educations %}
+    <div class="timeline-container">
+      <div class="timeline-dot">
+      </div>
+      <div class="timeline-row">
+        <img class="timeline-profile" src={{ education.profile }} alt="{{ education.profile }}">
+        <div class="timeline-body">
+          <span class="timeline-date">
+            {{ education.start | date: date_format }} - {{ education.end | date:
+            date_format}}
+          </span>
+          <h3 class="timeline-title">{{ education.title }}</h2>
+            <p class="timeline-name">at {{ education.name }}</p>
+            <span class="timeline-content">{{ education.content | markdownify }}</span>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </section>
 </div>
