--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,29 +2,62 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   16px !default;
+$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-size: 16px !default;
 $base-font-weight: 400 !default;
-$small-font-size:  $base-font-size * 0.875 !default;
+$small-font-size: $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit:     30px !default;
+$spacing-unit: 30px !default;
 
-$text-color:       #111 !default;
+$text-color: #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$brand-color: #2a7ae2 !default;
 
-$grey-color:       #828282 !default;
+// Custom
+$black-025: #fafafb;
+$black-050: #eff0f1;
+$black-075: #e4e6e8;
+$black-100: #d6d9dc;
+$black-150: #c8ccd0;
+$black-200: #bbc0c4;
+$black-300: #9fa6ad;
+$black-350: #9199a1;
+$black-400: #848d95;
+$black-500: #6a737c;
+$black-600: #535a60;
+$black-700: #3c4146;
+$black-750: #2f3337;
+$black-800: #242729;
+$black-900: #0c0d0e;
+
+// Custom typeography
+$headline1-font-size: 96;
+$headline2-font-size: 60;
+$headline3-font-size: 48;
+$headline4-font-size: 34;
+$headline5-font-size: 24;
+$headline6-font-size: 20;
+$body1-font-size: 16;
+$body2-font-size: 14;
+$subtitle1-font-size: 16;
+$subtitle2-font-size: 14;
+$button-font-size: 14;
+$overline-font-size: 10;
+$caption-font-size: 12;
+
+$grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
+$grey-color-dark: darken($grey-color, 25%) !default;
 
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width: 800px !default;
 
-$on-palm:          600px !default;
-$on-laptop:        800px !default;
+$on-palm: 600px !default;
+$on-laptop: 800px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -44,8 +77,4 @@ $on-laptop:        800px !default;
 }
 
 // Import partials.
-@import
-  "minima/base",
-  "minima/layout",
-  "minima/syntax-highlighting"
-;
+@import "minima/base", "minima/layout", "minima/syntax-highlighting";
